chart resize... impressions/clicks

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -151,7 +151,7 @@
             ResizeChart('summary', true);
             ResizeChart('creativeBar', true);
             ResizeChart('creativeScatter', true);
-            //ResizeChart('tdWeekly', true);
+            ResizeChart('tdWeekly', true);
         }
 
         // Resize a chart, optionally refreshing it.
