--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
@@ -24,7 +24,7 @@
     $(function () {
         var weeklyDS = CreateTdRangeDataSource('@Url.Action("WeeklyData", "Stats")', null, false, 'nosort', 0);
         CreateTdRangeGrid(weeklyDS, $('#tdWeeklyGrid'), 300, 'Week', 10, true, false, null);
-        CreateClicksConversionsChart(weeklyDS, 'tdWeeklyChart', 'Weekly Clicks vs. Conversions Performance');
+        CreateImpressionsClicksChart(weeklyDS, 'tdWeeklyChart', 'Weekly Impressions vs. Clicks Performance');
 
         weeklyDS.read();
     });
