--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
@@ -99,14 +99,14 @@
         el.kendoGrid(args);
     }
 
-    function CreateClicksConversionsChart(dataSource, elId, title) {
+    function CreateImpressionsClicksChart(dataSource, elId, title) {
         var series = [
-            { field: "Clicks", name: 'Clicks', axis: "clicks", tooltip: { template: "Clicks: #= kendo.format('{0:N0}',value) #" }, type: "area", color: "#007eff" },
-            { field: "Conversions", name: 'Conversions', axis: "conversions", tooltip: { template: "Conversions: #= kendo.format('{0:N0}',value) #" }, type: "line", color: "#ff1c1c" }
+            { field: "Impressions", name: 'Impressions', axis: "impressions", tooltip: { template: "Impressions: #= kendo.format('{0:N0}',value) #" }, type: "area", color: "#007eff" },
+            { field: "Clicks", name: 'Clicks', axis: "clicks", tooltip: { template: "Clicks: #= kendo.format('{0:N0}',value) #" }, type: "line", color: "#ff1c1c" }
         ];
         var valueAxis = [
-            { name: "clicks", labels: { format: "N0", step: 2 }, title: { text: "Clicks" } },
-            { name: "conversions", labels: { format: "N0", step: 2 }, title: { text: "Conversions" } }
+            { name: "impressions", labels: { format: "N0", step: 2 }, title: { text: "Impressions" } },
+            { name: "clicks", labels: { format: "N0", step: 2 }, title: { text: "Clicks" } }
         ];
         CreateTdChart(dataSource, elId, title, series, valueAxis);
     }
