--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
@@ -101,8 +101,8 @@
 
     function CreateImpressionsClicksChart(dataSource, elId, title) {
         var series = [
-            { field: "Impressions", name: 'Impressions', axis: "impressions", tooltip: { template: "Impressions: #= kendo.format('{0:N0}',value) #" }, type: "area", color: "#007eff" },
-            { field: "Clicks", name: 'Clicks', axis: "clicks", tooltip: { template: "Clicks: #= kendo.format('{0:N0}',value) #" }, type: "line", color: "#ff1c1c" }
+            { field: "Impressions", name: 'Impressions', axis: "impressions", tooltip: { template: "Impressions: #= kendo.format('{0:N0}',value) #" }, type: "line" },
+            { field: "Clicks", name: 'Clicks', axis: "clicks", tooltip: { template: "Clicks: #= kendo.format('{0:N0}',value) #" }, type: "line" }
         ];
         var valueAxis = [
             { name: "impressions", labels: { format: "N0", step: 2 }, title: { text: "Impressions" } },
