--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Weekly.cshtml
@@ -24,7 +24,11 @@
     $(function () {
         var weeklyDS = CreateTdRangeDataSource('@Url.Action("WeeklyData", "Stats")', null, false, 'nosort', 0);
         CreateTdRangeGrid(weeklyDS, $('#tdWeeklyGrid'), 300, 'Week', 10, true, false, null);
-        CreateConversionsCPAChart(weeklyDS, 'tdWeeklyChart', 'Weekly Conversions vs. eCPA Performance');
+@if (Model.UserInfo.TDAccount.ShowConversions) {
+        <text>CreateConversionsCPAChart(weeklyDS, 'tdWeeklyChart', 'Weekly Conversions vs. eCPA Performance');</text>
+} else {
+        <text>CreateImpressionsClicksChart(weeklyDS, 'tdWeeklyChart', 'Weekly Impressions vs. Clicks Performance');</text>
+}
 
         weeklyDS.read();
     });
