--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
@@ -138,7 +138,7 @@
                     }
                 }
             },
-            sort: { field: "Impressions", dir: "desc" },
+            sort: { field: "Impressions", dir: "asc" },
             aggregate: [
                 { field: "Impressions", aggregate: "sum" },
                 { field: "Clicks", aggregate: "sum" },
@@ -185,7 +185,10 @@
             }
             ],
             filterable: false,
-            sortable: true,
+            sortable: {
+                mode: 'single',
+                allowUnsort: false
+            },
             pageable: true
         });
     }
