--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -26,41 +26,45 @@
 <h3>Totals</h3>
 <table>
     <tr>
+        <td>Date Range:</td>
+        <td id="tdDateRange" style="font-weight:bold" colspan="5"></td>
+    </tr>
+    <tr>
         <td>Impressions:</td>
-        <td id="tdImpressions" style="text-align:right"></td>
+        <td id="tdImpressions" style="font-weight:bold; text-align:right"></td>
         <td>eCPM:</td>
-        <td id="tdCPM" style="text-align:right"></td>
+        <td id="tdCPM" style="font-weight:bold; text-align:right"></td>
     </tr>
     <tr>
         <td>Clicks:</td>
-        <td id="tdClicks" style="text-align:right"></td>
+        <td id="tdClicks" style="font-weight:bold; text-align:right"></td>
         <td>eCPC:</td>
-        <td id="tdCPC" style="text-align:right"></td>
+        <td id="tdCPC" style="font-weight:bold; text-align:right"></td>
         <td>CTR:</td>
-        <td id="tdCTR" style="text-align:right"></td>
+        <td id="tdCTR" style="font-weight:bold; text-align:right"></td>
     </tr>
 @if (Model.UserInfo.TDAccount.ShowConversions)
 {
     <tr>
         <td>Conversions:</td>
-        <td id="tdConversions" style="text-align:right"></td>
+        <td id="tdConversions" style="font-weight:bold; text-align:right"></td>
         <td>eCPA:</td>
-        <td id="tdCPA" style="text-align:right"></td>
+        <td id="tdCPA" style="font-weight:bold; text-align:right"></td>
         <td>ConvRate:</td>
-        <td id="tdConvRate" style="text-align:right"></td>
+        <td id="tdConvRate" style="font-weight:bold; text-align:right"></td>
     </tr>
 }
     <tr>
         <td>Media Spend:</td>
-        <td id="tdSpend" style="text-align:right"></td>
+        <td id="tdSpend" style="font-weight:bold; text-align:right"></td>
     </tr>
     <tr>
         <td>Management Fee:</td>
-        <td id="tdMgmtFee" style="text-align:right"></td>
+        <td id="tdMgmtFee" style="font-weight:bold; text-align:right"></td>
     </tr>
     <tr>
         <td>Total Spend:</td>
-        <td id="tdTotalSpend" style="text-align:right"></td>
+        <td id="tdTotalSpend" style="font-weight:bold; text-align:right"></td>
     </tr>
 </table>
 </div>
@@ -125,21 +129,31 @@
 
     function SummaryDataSource_OnChange() {
         var aggs = this.aggregates();
-        $('#tdImpressions').html(kendo.toString(aggs.Impressions.sum, 'N0'));
-        $('#tdCPM').html(kendo.toString(aggs.CPM.agg, 'C3'));
+        if (aggs) {
+            $('#tdDateRange').html(aggs.Info.Start + ' - ' + aggs.Info.End);
 
-        $('#tdClicks').html(kendo.toString(aggs.Clicks.sum, 'N0'));
-        $('#tdCPC').html(kendo.toString(aggs.CPC.agg, 'C3'));
-        $('#tdCTR').html(kendo.toString(aggs.CTR.agg, 'P3'));
+            $('#tdImpressions').html(kendo.toString(aggs.Impressions.sum, 'N0'));
+            $('#tdCPM').html(kendo.toString(aggs.CPM.agg, 'C3'));
+
+            $('#tdClicks').html(kendo.toString(aggs.Clicks.sum, 'N0'));
+            $('#tdCPC').html(kendo.toString(aggs.CPC.agg, 'C3'));
+            $('#tdCTR').html(kendo.toString(aggs.CTR.agg, 'P3'));
 @if (Model.UserInfo.TDAccount.ShowConversions)
 {
     <text>$('#tdConversions').html(kendo.toString(aggs.Conversions.sum, 'N0'));</text>
     <text>$('#tdCPA').html(kendo.toString(aggs.CPA.agg, 'C'));</text>
     <text>$('#tdConvRate').html(kendo.toString(aggs.ConvRate.agg, 'P'));</text>
 }
-        $('#tdSpend').html(kendo.toString(aggs.Spend.sum, 'C'));
-        $('#tdMgmtFee').html(kendo.toString(aggs.Spend.fee, 'C'));
-        $('#tdTotalSpend').html(kendo.toString(aggs.Spend.total, 'C'));
+            $('#tdSpend').html(kendo.toString(aggs.Spend.sum, 'C'));
+            $('#tdMgmtFee').html(kendo.toString(aggs.Spend.fee, 'C'));
+            $('#tdTotalSpend').html(kendo.toString(aggs.Spend.total, 'C'));
+        } else {
+            $('#tdDateRange, #tdImpressions, #tdCPM, #tdClicks, #tdCPC, #tdCTR, #tdSpend, #tdMgmtFee, #tdTotalSpend').html('');
+@if (Model.UserInfo.TDAccount.ShowConversions)
+{
+    <text>$('#tdConversions, #tdCPA, #tdConvRate').html('');</text>
+}
+        }
     }
 
     function CreateSummaryDataSource() {
@@ -170,7 +184,6 @@
                     id: 'Id',
                     fields: {
                         Date: { type: 'date' },
-                        AdvertiserCurrency: { type: 'string' },
                         Impressions: { type: 'number' },
                         Clicks: { type: 'number' },
                         Conversions: { type: 'number' },
@@ -193,11 +206,13 @@
             requestEnd: function (e) {
                 if (e.type == "read") {
                     var rows = e.response.data;
-                    for (var i = 0; i < rows.length; i++) {
-                        rows[i].Date = rows[i].Date.replace(/\d+/, function (n) {
-                            var time = parseInt(n);
-                            return parseInt(time) + new Date(time).getTimezoneOffset() * 60000;
-                        });
+                    if (rows) {
+                        for (var i = 0; i < rows.length; i++) {
+                            rows[i].Date = rows[i].Date.replace(/\d+/, function (n) {
+                                var time = parseInt(n);
+                                return parseInt(time) + new Date(time).getTimezoneOffset() * 60000;
+                            });
+                        }
                     }
                 }
             }
