rm mgmt fee & total spend

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDKendoFuncs.cshtml
@@ -43,7 +43,7 @@
                 { field: 'Impressions', aggregate: 'sum' },
                 { field: 'Clicks', aggregate: 'sum' },
                 { field: 'Conversions', aggregate: 'sum' },
-                { field: 'Spend', aggregate: 'sum' },@* include fee? *@
+                { field: 'Spend', aggregate: 'sum' },
                 { field: 'CTR', aggregate: 'agg' },
                 { field: 'ConvRate', aggregate: 'agg' },
                 { field: 'CPM', aggregate: 'agg' },
