--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
     </div>
     <div class="large-2 columns topinfo">
         @*Html.Partial("_HelloPartial", false)*@
-        <p style="text-align: center; margin-top: 30px"><span>Hello, @User.Identity.Name!</span></p>
+        @*<p style="text-align: center; margin-top: 30px"><span>Hello, @User.Identity.Name!</span></p>*@
+        <img style="width: 200px; margin-top: 10px" src="~/Images/programmatic.png" />
     </div>
     <div class="large-5 columns logout">
         <div style="float: right">
